--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -27,9 +27,9 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://118.25.16.238:3306/training?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://127.0.0.1:9090/training?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: pw,1211
+        password: mucoo
         hikari:
             data-source-properties:
                 cachePrepStmts: true
